--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ set(alligator_SRCS
     resources.qrc
     )
 
-add_executable(alligator ${alligator_SRCS} ${RESOURCES})
-target_link_libraries(alligator Qt5::Core Qt5::Qml Qt5::Quick Qt5::Svg Qt5::Sql KF5::KIOCore KF5::KIOFileWidgets KF5::KIONTLM KF5::Syndication)
+add_executable(alligator ${alligator_SRCS})
+target_link_libraries(alligator Qt5::Core Qt5::Qml Qt5::Quick Qt5::Svg Qt5::Sql KF5::Syndication)
 
 install(TARGETS alligator ${KF5_INSTALL_TARGETS_DEFAULT_ARGS})
