--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 project(Alligator)
 
 cmake_minimum_required(VERSION 2.8.12)
-set(KF5_MIN_VERSION "5.18.0")
-set(QT_MIN_VERSION "5.5.0")
 
 if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
    message(FATAL_ERROR "This application requires an out of source build. Please create a separate build directory.")
@@ -21,9 +19,8 @@ include(KDECMakeSettings)
 include(ECMPoQmTools)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 
-find_package(Qt5 ${QT_MIN_VERSION} REQUIRED NO_MODULE COMPONENTS Core Quick Test Gui Svg QuickControls2 Sql)
-find_package(KF5Kirigami2 ${KF5_MIN_VERSION} REQUIRED)
-find_package(KF5Syndication ${KF5_MIN_VERSION} REQUIRED)
+find_package(Qt5 REQUIRED NO_MODULE COMPONENTS Core Quick Test Gui Svg QuickControls2 Sql)
+find_package(KF5 REQUIRED COMPONENTS CoreAddons Syndication Config)
 
 set(CMAKE_CXX_STANDARD 11)
 
