--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,9 @@ set(alligator_SRCS
     resources.qrc
     )
 
+kconfig_add_kcfg_files(alligator_SRCS alligatorsettings.kcfgc GENERATE_MOC)
+
 add_executable(alligator ${alligator_SRCS})
-target_link_libraries(alligator Qt5::Core Qt5::Qml Qt5::Quick Qt5::Svg Qt5::Sql KF5::Syndication)
+target_link_libraries(alligator Qt5::Core Qt5::Qml Qt5::Quick Qt5::Svg Qt5::Sql KF5::Syndication KF5::CoreAddons KF5::ConfigGui)
 
 install(TARGETS alligator ${KF5_INSTALL_TARGETS_DEFAULT_ARGS})
