--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ include(ECMPoQmTools)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 
 find_package(Qt5 REQUIRED NO_MODULE COMPONENTS Core Quick Test Gui Svg QuickControls2 Sql)
-find_package(KF5 REQUIRED COMPONENTS CoreAddons Syndication Config)
+find_package(KF5 REQUIRED COMPONENTS CoreAddons Syndication Config I18n)
 
 set(CMAKE_CXX_STANDARD 11)
 
