Update icon name

--- a/org.kde.mobile.alligator.desktop
+++ b/org.kde.mobile.alligator.desktop
@@ -3,7 +3,7 @@ Name=Alligator
 Comment=Mobile Feed Reader
 GenericName=Feed Reader
 Encoding=UTF-8
-Icon=org.kde.mobile.alligator
+Icon=alligator
 Exec=alligator
 Type=Application
 Categories=Qt;KDE;RSS;
