--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ include:
 
 android:
   variables:
-    CI_TOOLING: /home/user
+    CI_TOOLING: /home/user/ci-tooling
   stage: build
   image: kdeorg/android-sdk
   script:
