Use help-about-symbolic instead of help-about

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,7 +24,7 @@ if(ANDROID)
         bookmark-new
         delete
         settings-configure
-        help-about
+        help-about-symbolic
         list-add
         view-refresh
     )
