--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,9 @@ android:
   image: nicolasfella/android-sdk
 
   script:
-    - cd /home/user
+    - pushd /home/user
     - /opt/helpers/build-kde-dependencies alligator
+    - popd
     - ls
     - APK_ARGS=`python3 /opt/helpers/get-apk-args.py .`
     - build-kde-project alligator Applications $APK_ARGS
