Fix for real this time

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,5 +15,5 @@ android:
     - popd
     - ls
     - APK_ARGS=`python3 /opt/helpers/get-apk-args.py .`
-    - build-kde-project alligator Applications $APK_ARGS
+    - /opt/helpers/build-kde-project alligator Applications $APK_ARGS
     - /opt/helpers/create-apk alligator
