Package alligator icon on android

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ if(ANDROID)
         help-about-symbolic
         list-add
         view-refresh
+        alligator
     )
 else()
     target_link_libraries(alligator PRIVATE Qt5::Widgets)
