--- a/org.kde.mobile.alligator.desktop
+++ b/org.kde.mobile.alligator.desktop
@@ -42,7 +42,7 @@ GenericName[uk]=Читання подач
 GenericName[x-test]=xxFeed Readerxx
 Encoding=UTF-8
 Icon=alligator
-Exec=alligator %u
+Exec=alligator
 Type=Application
 Categories=Qt;KDE;RSS;
 Terminal=false
