Show network errors when entryList is empty

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ if(ANDROID)
         alligator
         mail-sent
         globe
+        data-error
     )
 else()
     target_link_libraries(alligator PRIVATE Qt5::Widgets)
