Improve desktop file

--- a/org.kde.alligator.desktop
+++ b/org.kde.alligator.desktop
@@ -56,11 +56,10 @@ GenericName[sl]=Bralnik novic
 GenericName[sv]=Kanalläsare
 GenericName[uk]=Читання подач
 GenericName[x-test]=xxFeed Readerxx
-Encoding=UTF-8
 Icon=alligator
 Exec=alligator
 Type=Application
-Categories=Qt;KDE;RSS;
+Categories=Qt;KDE;Feed;
 Terminal=false
 MimeType=application/rss+xml;
 InitialPreference=10
