Fix minor issues in the desktop file
Drop the mimetype for now since it's not implemented anyways
Add 'Network' as a category

--- a/org.kde.alligator.desktop
+++ b/org.kde.alligator.desktop
@@ -65,7 +65,6 @@ GenericName[x-test]=xxFeed Readerxx
 Icon=alligator
 Exec=alligator
 Type=Application
-Categories=Qt;KDE;Feed;
+Categories=Network;Qt;KDE;Feed;
 Terminal=false
-MimeType=application/rss+xml;
 InitialPreference=10
