--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(alligator_SRCS
+add_executable(alligator
     main.cpp
     feedsmodel.cpp
     entriesmodel.cpp
@@ -10,9 +10,9 @@ set(alligator_SRCS
     resources.qrc
 )
 
-kconfig_add_kcfg_files(alligator_SRCS alligatorsettings.kcfgc GENERATE_MOC)
+kconfig_add_kcfg_files(alligator alligatorsettings.kcfgc GENERATE_MOC)
 
-add_executable(alligator ${alligator_SRCS})
+target_include_directories(alligator PRIVATE ${CMAKE_BINARY_DIR})
 target_link_libraries(alligator PRIVATE Qt5::Core Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::Sql KF5::Syndication KF5::CoreAddons KF5::ConfigGui KF5::I18n)
 
 if(ANDROID)
