--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(alligator
     author.cpp
     enclosure.cpp
     enclosuredownloadjob.cpp
+    queuemodel.cpp
     resources.qrc
 )
 
