First work on datamanager

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(alligator
     enclosure.cpp
     enclosuredownloadjob.cpp
     queuemodel.cpp
+    datamanager.cpp
     resources.qrc
 )
 
