Initial copy and adaptation of MPRIS2 from elisa (WIP)
This MPRIS2 implementation compiles without errors, but is not yet
instantiated within the application itself.
To be continued...

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,9 @@ add_executable(alligator
     datamanager.cpp
     audiomanager.cpp
     powermanagementinterface.cpp
+    mpris2/mpris2.cpp
+    mpris2/mediaplayer2.cpp
+    mpris2/mediaplayer2player.cpp
     resources.qrc
 )
 
