Add first version of EpisodeListPage

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(alligator
     enclosure.cpp
     enclosuredownloadjob.cpp
     queuemodel.cpp
+    episodemodel.cpp
     datamanager.cpp
     audiomanager.cpp
     powermanagementinterface.cpp
