Add capability to monitor ongoing downloads

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(alligator
     enclosuredownloadjob.cpp
     queuemodel.cpp
     episodemodel.cpp
+    downloadprogressmodel.cpp
     datamanager.cpp
     audiomanager.cpp
     powermanagementinterface.cpp
