Don't show clear error button when there are no errors
Also add the icon to the icons to be packed for android.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,6 +51,7 @@ if(ANDROID)
         document-export
         document-open-folder
         edit-delete-remove
+        edit-clear-all
         download
         media-playlist-append
         media-seek-backward
