Refactor Error implementation and add Error::Type
- This refactoring also includes a cleanup of a lot of header includes to
  avoid circular dependencies.
- The error message will now be shown below the info message.
- Add database migration (for Errors)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,7 @@ set(SRCS_base
     audiomanager.cpp
     powermanagementinterface.cpp
     errorlogmodel.cpp
-    error.h
+    error.cpp
     mpris2/mpris2.cpp
     resources.qrc
 )
