--- a/org.kde.kasts.desktop
+++ b/org.kde.kasts.desktop
@@ -1,3 +1,5 @@
+# SPDX-License-Identifier: CC0-1.0
+# SPDX-FileCopyrightText: 2021 Bart De Vries <bart@mogwai.be>
 [Desktop Entry]
 Name=Kasts
 Name[ca]=Kasts
