Add missing icon for android build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -86,6 +86,7 @@ if(ANDROID)
         source-playlist
         arrow-down
         overflow-menu
+        checkbox
     )
 else()
     target_link_libraries(kasts PRIVATE Qt::Widgets Qt::DBus)
