Workaround for kde_configure_git_pre_commit_hook not working on android CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,4 +63,8 @@ feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAG
 
 file(GLOB_RECURSE ALL_CLANG_FORMAT_SOURCE_FILES src/*.cpp src/*.h)
 kde_clang_format(${ALL_CLANG_FORMAT_SOURCE_FILES})
-kde_configure_git_pre_commit_hook(CHECKS CLANG_FORMAT)
+
+if (NOT ANDROID)
+    # inside if-statement to work around problems with gitlab Android CI
+    kde_configure_git_pre_commit_hook(CHECKS CLANG_FORMAT)
+endif()
