Move error list to settings page (as overlaysheet)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -137,6 +137,7 @@ if(ANDROID)
         arrow-down
         overflow-menu
         checkbox
+        error
     )
 else()
     target_link_libraries(kasts PRIVATE Qt::Widgets Qt::DBus)
