Add model for searching for podcasts

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SRCS_base
     powermanagementinterface.cpp
     errorlogmodel.cpp
     error.cpp
+    podcastsearchmodel.cpp
     mpris2/mpris2.cpp
     resources.qrc
 )
