Expanded the model with more roles and designed frontend.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -141,6 +141,8 @@ if(ANDROID)
         overflow-menu
         checkbox
         error
+        search
+        kt-add-feeds
     )
 else()
     target_link_libraries(kasts PRIVATE Qt::Widgets Qt::DBus)
