Implement Filter actions in GUI

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -136,6 +136,7 @@ if(ANDROID)
         list-add
         list-remove
         view-refresh
+        view-filter
         kasts
         mail-sent
         globe
